EvansDiary.Web/Content/style.less
@import "styling/_variables";

p {
  text-align: justify;
}

.logo {
  font-size: 1.6em;
  color: white;
  font-family: "Open Sans", Helvetica, sans-serif;

  a {
    color: white;
    text-decoration: none;
  }
  
  @media screen and (max-width: @mq-md) {
    padding-left: 1em;
  }

  @media (min-width: @mq-sm) {
    font-size: 2em;
  }
}

h1 {
  font-size: 36px;

  @media screen and (max-width: @mq-sm) {
    font-size: 21px;
  }

  @media screen and (min-width: @mq-sm) and (max-width: @mq-md) {
     font-size: 24px;
  }
}

@media screen and (max-width: @mq-sm) {
  h3 {
    font-size: 18px;
  }
}

@media screen and (max-width: @mq-sm) {
  h4.back-light {
    font-size: 10px;
  }
  .carousel-indicators {
    margin-bottom: 0;
  }
  .carousel-caption {
    bottom: 5px;
  }
}

.container {
  margin: 0 auto;
}

.pure-img-responsive {
  max-width: 100%;
  height: auto;

  @media screen and (max-width: @mq-md) {
    display: block;
    margin: 0 auto;
  }
}

.content-subhead {
  margin: 20px 0;
  font-weight: 300;
  color: #888;
  font-size: 16px;

  @media screen and (max-width: @mq-sm) {
    font-size: 14px;
  }
}

.diary-entry {
  p {
    line-height: 25px;
  }

  aside {
    padding: 1em 0.5em;
    color: white;
    width: 100%;
    font-size: 80%;
    text-align: center;

    span {
      color:#aaa;
    }
  }

  .additional-image {
    img {
      display: block;
      margin: 0 auto;
    }
  }
}

/* 
  Adjacent sibling selector 
  Add some top margin to the second diary entry
*/
.diary-entry + .diary-entry {
  margin-top: 1em;
}

.banner-static {
//  @media screen and (min-width: @mq-lg) {
    img {
      display: block;
      margin: 0 auto;
    }
  //}
}

.page-nav {
  .previous {
    float: left;
  }

  .next {
    float: right;
  }
}

.sub-heading {
  font-style: italic;
}

.center {
  text-align: center;
}

/*
  ---- Polaroids
*/

ul.polaroids {
  padding: 0;
  margin: 0;
  list-style: none;

  img {
    display: block;
    margin-bottom: 7px;
  }
}

.polaroid-container {
  img {
    display: block;
    margin-bottom: 7px;
  }
  
  span.polaroid {
    background: #fff;
    display: inline-block;
    margin: 0 10px 20px 10px;
    padding: 7px;
    text-align: center;
    font-family: 'Permanent Marker', sans-serif;
    text-decoration: none;
    color: #333;
    font-size: 18px;
    -webkit-transform: none;
       -moz-transform: none;
            transform: none;
    top: -5px;

    /* Add drop shadows and smooth out the transition (Safari only) */
    -webkit-transition: -webkit-transform .15s linear;
    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
       -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
            box-shadow: 0 3px 6px rgba(0,0,0,.25);

    @media screen and (max-width: @mq-sm) {
      font-size: 10px;
    }
    @media screen and (min-width: @mq-sm) and (max-width: @mq-md) {
      font-size: 14px;
    }
  }
}

ul.polaroids a:after, .polaroid-container span.polaroid:after {
  content: attr(title);
}

/* By default, we tilt all our images -2 degrees */
ul.polaroids a {
  background: #fff;
  display: inline;
  float: left;
  margin: 0 10px 20px 10px;
  //width: auto;
  padding: 7px;
  text-align: center;
  font-family: 'Permanent Marker', sans-serif;
  text-decoration: none;
  color: #333;
  font-size: 18px;
  -webkit-transform: rotate(-2deg);
     -moz-transform: rotate(-2deg);
          transform: rotate(-2deg);

  /* Add drop shadows and smooth out the transition (Safari only) */
  -webkit-transition: -webkit-transform .15s linear;
  -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
     -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
          box-shadow: 0 3px 6px rgba(0,0,0,.25);

  @media screen and (max-width: @mq-xs) {
    font-size: 12px;
  }
  @media screen and (min-width: @mq-xs) and (max-width: @mq-md) {
    font-size: 14px;
  }
}
 
/* Rotate all even images 2 degrees */
ul.polaroids li:nth-child(even) a {
  -webkit-transform: rotate(2deg);
     -moz-transform: rotate(2deg);
          transform: rotate(2deg);
}
 
/* Don't rotate every third image, but offset its position */
ul.polaroids li:nth-child(3n) a {
  -webkit-transform: none;
     -moz-transform: none;
          transform: none;
  position: relative;
  top: -5px;
}
 
/* Rotate every fifth image by 5 degrees and offset it */
ul.polaroids li:nth-child(5n) a {
  -webkit-transform: rotate(5deg);
     -moz-transform: rotate(5deg);
          transform: rotate(5deg);
  position: relative;
  right: 5px;
}
 
/* Keep default rotate for every eighth, but offset it */
ul.polaroids li:nth-child(8n) a {
  position: relative;
  top: 8px;
  right: 5px;
}
 
/* Keep default rotate for every eleventh, but offset it */
ul.polaroids li:nth-child(11n) a {
  position: relative;
  top: 3px;
  left: -5px;
}

/* Scale the images on hover, add transitions for smoothing things out, and ensure the hover appears on top */
ul.polaroids a:hover {
  -webkit-transform: scale(1.10) !important;
     -moz-transform: scale(1.10) !important;
          transform: scale(1.10) !important;
  position: relative;
  z-index: 5;

  /* On hover, darken the shadows a bit */
  &:hover {
    -webkit-box-shadow: 0 3px 6px rgba(0,0,0,.5);
       -moz-box-shadow: 0 3px 6px rgba(0,0,0,.5);
            box-shadow: 0 3px 6px rgba(0,0,0,.25);
  }
}

/*
  ---- Flipbook
*/
#rotating-item-wrapper {
  margin: 0 auto;
  position: relative;
  // The height must be set for this to work but I've made it responsive, so the height
  // will now be set when we resize the window, it will match the height of the blocks 
  // to the parent container of the rotating-item-wrapper (.flipbook) and this item will 
  // use it's height
}

.rotating-item {
  display: none;
  position: absolute;
  top: 0;
  left: 0;

  //border: 10px solid #fff;
  /*-webkit-box-shadow: 0 3px 6px rgba(0,0,0,.25);
     -moz-box-shadow: 0 3px 6px rgba(0,0,0,.25);
          box-shadow: 0 3px 6px rgba(0,0,0,.25);*/
}

/*
  ---- Block Grid
*/
#about-me {
  .block-grid {
    margin: 0;
  }

  img {
    width: 100%;
    max-width: 110%;
    -webkit-transition: all 0.25s ease-in;
    -moz-transition: all 0.25s ease-in;
    -o-transition: all 0.25s ease-in;
    transition: all 0.25s ease-in;
    height: auto;
  }

  h4 {
    font-family: 'PT Serif', serif;
    font-size: 4rem;
    line-height: 1.2;
    color: #58595B;
    margin-bottom: 2rem;
    width: 100%;

    @media screen and (max-width: @mq-xs) {
      font-size: 3.4rem;
    }

    @media screen and (min-width: @mq-md) and (max-width: @mq-lg) {
      font-size: 2.4em;
    }
  }

  p {
    color: #58595B;
    font-family: "Open Sans", Helvetica, sans-serif;
    font-size: 1.25rem;
    text-transform: uppercase;
    width: 100%;
    text-align: unset;
  }

  .block {
    padding: 0;
    position: relative;
    //background: #FDE000;
    overflow: hidden;
    height: auto;

    &:hover > .overlay {
      -webkit-transition: all 0.25s ease-in;
      -moz-transition: all 0.25s ease-in;
      -o-transition: all 0.25s ease-in;
      transition: all 0.25s ease-in;
      left: 0;
    }
  }
  
  .overlay {
    width: 100%;
    height: 100%;
    position: absolute;
    padding: 3rem;
    background: rgba(253, 224, 0, 0.9);
    bottom: 0;
    left: -100%;
    overflow: hidden;
    -webkit-transition: all 0.25s ease-in-out;
    -moz-transition: all 0.25s ease-in-out;
    -o-transition: all 0.25s ease-in-out;
    transition: all 0.25s ease-in-out;

    a {
      text-decoration: none;
      display: block;
      height: 100%;
    }
  }
}

